Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10174

Lustre master (pre-2.11) fails to build against ZFS 0.6.5.7

XMLWordPrintable

    • 3
    • 9223372036854775807

      Because of patch https://review.whamcloud.com/29242, master no longer builds against older ZFS versions:

      /tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre/osd-zfs/osd_handler.c: In function 'osd_objset_unregister_callbacks':
      /tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre/osd-zfs/osd_handler.c:808: error: 'ZFS_PROP_DNODESIZE' undeclared (first use in this function)
      /tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre/osd-zfs/osd_handler.c:808: error: (Each undeclared identifier is reported only once
      /tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre/osd-zfs/osd_handler.c:808: error: for each function it appears in.)
      /tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre/osd-zfs/osd_handler.c: In function 'osd_objset_register_callbacks':
      /tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre/osd-zfs/osd_handler.c:846: error: 'ZFS_PROP_DNODESIZE' undeclared (first use in this function)
      make[7]: *** [/tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre/osd-zfs/osd_handler.o] Error 1
      make[6]: *** [/tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre/osd-zfs] Error 2
      make[6]: *** Waiting for unfinished jobs....
      make[5]: *** [/tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3/lustre] Error 2
      make[4]: *** [_module_/tmp/rpmbuild-lustre-buildbot-g81fI3Fo/BUILD/lustre-2.10.54_43_gc2c9be3] Error 2
      make[3]: *** [modules] Error 2
      make[2]: *** [all-recursive] Error 1
      make[1]: *** [all] Error 2
      

      The build.lustre.org buildbot has run into this:
      http://build.lustre.org/builders/CentOS%206.7%20x86_64%20%28BUILD%29/builds/11876/steps/shell_4/logs/stdio

            utopiabound Nathaniel Clark
            utopiabound Nathaniel Clark
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: